--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "animejs": "^3.2.2",
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
-    "react-loader-spinner": "^6.1.6"
+    "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
