--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     build:
       context: ./backend/postgres
     environment:
-      DATABASE_URL: postgres://drumuser:capstone@database:5432/drumpatterns
+      DATABASE_URL: "postgres://drumuser:capstone@database:5432/drumpatterns"
     ports:
       - "7210:7210"
     depends_on:
@@ -38,8 +38,11 @@ services:
     container_name: frontend
     build:
       context: ./frontend
+    environment:
+      - VITE_API_URL=http://localhost:7210
+      - VITE_WS_URL=ws://localhost:7220
     ports:
-      - "7230:80"
+      - "7230:5173"
     depends_on:
       - backend
       - websocket
